--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Chakra">
         <activity
-            android:name=".ReceiptEmptyActivity"
+            android:name=".receipt_empty"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
