add layout wishlist

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Chakra">
         <activity
+            android:name=".WishlistActivity"
+            android:exported="true" />
+        <activity
             android:name=".ReceiptEmptyActivity"
             android:exported="false" />
         <activity
