Add layout detail history topup

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Chakra">
         <activity
+            android:name=".DetailHistoryTopUpActivity"
+            android:exported="true" />
+        <activity
             android:name=".WishlistActivity"
             android:exported="true" />
         <activity
