--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Chakra">
         <activity
-            android:name=".ReceiptEmptyActivity"
-            android:exported="false" />
-        <activity
-            android:name=".CartActivity"
-            android:exported="true">
+            android:name=".AddNewActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ReceiptEmptyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CartActivity"
+            android:exported="true">
+
         </activity>
     </application>
 
